--- a/NorthWindCoreUnitTest/NorthWindCoreUnitTest.csproj
+++ b/NorthWindCoreUnitTest/NorthWindCoreUnitTest.csproj
@@ -18,4 +18,10 @@
 	  <ProjectReference Include="..\NorthWindDataProviderLibrary\NorthWindDataProviderLibrary.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <None Update="products.json">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
+	</ItemGroup>
+
 </Project>
