added connection string demo using environment var

--- a/NorthWindCoreUnitTest/NorthWindCoreUnitTest.csproj
+++ b/NorthWindCoreUnitTest/NorthWindCoreUnitTest.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\ConfigurationHelper1\ConfigurationHelper1.csproj" />
 	  <ProjectReference Include="..\NorthWindCoreLibrary\NorthWindCoreLibrary.csproj" />
 	  <ProjectReference Include="..\NorthWindDataProviderLibrary\NorthWindDataProviderLibrary.csproj" />
 	</ItemGroup>
