--- a/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
+++ b/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
@@ -7,10 +7,27 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Include="bin\Debug\net5.0\Json\Contacts.json" />
+	  <Content Include="bin\Debug\net5.0\Json\ContactType.json" />
+	  <Content Include="bin\Debug\net5.0\Json\Countries.json" />
+	  <Content Include="bin\Debug\net5.0\Json\Customers.json" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
 		<PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
 		<PackageReference Include="coverlet.collector" Version="1.3.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
 	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\NorthWindCoreLibrary\NorthWindCoreLibrary.csproj" />
+	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="if not exist $(TargetDir)\Json mkdir $(TargetDir)\Json" />
+	</Target>
 
 </Project>
