--- a/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
+++ b/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+	  <Content Include="bin\Debug\net5.0\Json\ContactDevices.json" />
 	  <Content Include="bin\Debug\net5.0\Json\Contacts.json" />
 	  <Content Include="bin\Debug\net5.0\Json\ContactType.json" />
 	  <Content Include="bin\Debug\net5.0\Json\Countries.json" />
@@ -20,10 +21,17 @@
 		<PackageReference Include="MSTest.TestFramework" Version="2.1.1" />
 		<PackageReference Include="coverlet.collector" Version="1.3.0" />
 		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
 	</ItemGroup>
 
 	<ItemGroup>
 	  <ProjectReference Include="..\NorthWindCoreLibrary\NorthWindCoreLibrary.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <None Update="SQL_Queries\SingleCustomerByCompanyName.sql">
+	    <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+	  </None>
 	</ItemGroup>
 
 	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
