--- a/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
+++ b/NorthWindCoreUnitTest_InMemory/NorthWindCoreUnitTest_InMemory.csproj
@@ -16,6 +16,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="FluentValidation" Version="10.3.0" />
 		<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="5.0.8" />
 		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.7.1" />
 		<PackageReference Include="MSTest.TestAdapter" Version="2.1.1" />
