--- a/NorthWindCoreLibrary/appsettings.json
+++ b/NorthWindCoreLibrary/appsettings.json
@@ -1,6 +1,6 @@
 {
   "database": {
-    "DatabaseServer": ".\\SQLEXPRESS",
+    "DatabaseServer": "localhost\\SQLEXPRESS",
     "Catalog": "NorthWind2020",
     "IntegratedSecurity": "true",
     "UsingLogging": "true"
